syntax = "proto3";

import "google/protobuf/timestamp.proto";
import "operation.proto";

package pb.v1;

option java_package = "co.ledger.lama.bitcoin.transactor.protobuf";

service BitcoinTransactorService {
  rpc CreateTransaction(CreateTransactionRequest) returns (CreateTransactionResponse) {}
  rpc BroadcastTransaction(BroadcastTransactionRequest) returns (BroadcastTransactionResponse) {}
}

enum CoinSelector {
  DEPTH_FIRST = 0;
}

message CreateTransactionRequest {
  bytes accountId = 1;
  bytes keychainId = 2;
  CoinSelector coinSelection = 3;
  repeated PrepareTxOutput outputs = 4;
  string coinId = 5;
}

message CreateTransactionResponse {
  string hex = 1;
  string hash = 2;
  string witness_hash = 3;
  repeated Utxo utxos = 4;
}

message BroadcastTransactionRequest {
  bytes accountId = 1;
  bytes keychainId = 2;
  string coinId = 3;
  CreateTransactionResponse raw_transaction = 4;
  string privkey = 5; //only for now
}

message BroadcastTransactionResponse {
  string hex = 1;
  string hash = 2;
  string witness_hash = 3;
}

message PrepareTxOutput {
  string address = 1;
  string value = 2;
}
